tls/new-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-ing
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: rbot-tls
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - robotshop.eastus.cloudapp.azure.com
      secretName: rbot-tls
  rules:
    - host: robotshop.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
